--- a/002.org
+++ b/002.org
@@ -15,11 +15,11 @@ Grav and Gog /were/ friends. They were also accomplished gentleman philosophers.
 
 Not everyone was of this mind. Verk was staying in the burrow just two down from Grav, and inevitably they would run into each other. Often this was in the relief-burrow, as had happened the night before.
 
-The relief-burrow was positioned and shaped for optimal sound-deadening, for reasons that would utterly relate to modern readers. It was shaped, looking top-down, something like a daisy; scalloped around the perimeter so that sound would naturally dampen. The walls were also gently bowed outward from top-to-bottom. It offered the predictable visibility and viewability characteristics of a large, circular room, but didn't have the /acoustical/ characteristics of a large, circular room. Get it?
+The relief-burrow was positioned and shaped for optimal sound-deadening, for reasons that would utterly relate to modern readers. It was shaped, looking top-down, something like a daisy; scalloped around the perimeter so that sound would naturally dampen. The walls were also gently bowed outward from top-to-bottom. It offered the predictable visibility and view-ability characteristics of a large, circular room, but didn't have the /acoustical/ characteristics of a large, circular room. Get it?
 
-There was a constant, rather soothing, gurgle and plash of water. Although minimal and somewhat termpermental, the cave system had a small number of spring-fed water works. The relief-burrow was by a wide margin the biggest consumer of water. The Crav thought it all pretty clever and eminently maintainable: The circular room had a slight, very inconspicuously conical floor that was highest at the center and had a "one thing down for each one half of one boulder-door thing over[fn:: 1:50]" grade; enough to keep the entire room's floor (8 man diameter) covered in a sheet of two bowstring-finger-knuckle deep, rapidly moving water[fn:: Astonishing fact: After the decline and fall of the Crec and surrounding culture, the next time a similarly-shaped water feature appeared on earth it would be called "The Super Slippery Fun Lagoon", appearing in a New Jersey water park called 'Garden State Water World' in 1934. nb: too goddamn silly.] from the center, where an immense gurgling pot of cold water overflowed continuously.
+There was a constant, rather soothing, gurgle and plash of water. Although minimal and somewhat temperamental, the cave system had a small number of spring-fed water works. The relief-burrow was by a wide margin the biggest consumer of water. The Crav thought it all pretty clever and eminently maintainable: The circular room had a slight, very inconspicuously conical floor that was highest at the center and had a "one thing down for each one half of one boulder-door thing over[fn:: 1:50]" grade; enough to keep the entire room's floor (8 man diameter) covered in a sheet of two bowstring-finger-knuckle deep, rapidly moving water[fn:: Astonishing fact: After the decline and fall of the Crec and surrounding culture, the next time a similarly-shaped water feature appeared on earth it would be called "The Super Slippery Fun Lagoon", appearing in a New Jersey water park called 'Garden State Water World' in 1934. nb: too goddamn silly.] from the center, where an immense gurgling pot of cold water overflowed continuously.
 
-This was enough to create two small semiciruclar rivers from the entrance side of the room, around each half-circle of gutter, to the opposite side, closest to the hill's exterior, for the whole circular gutter was slightly tilted in this way. Once the water met the far side of the room (Where Grav noticed some mesmerizing patterns made by the two "rivers" colliding head-on.), it finally exited the room through a few arm-sized holes heading down what everyone always though of as "the back of the mountain".
+This was enough to create two small semicircular rivers from the entrance side of the room, around each half-circle of gutter, to the opposite side, closest to the hill's exterior, for the whole circular gutter was slightly tilted in this way. Once the water met the far side of the room (Where Grav noticed some mesmerizing patterns made by the two "rivers" colliding head-on.), it finally exited the room through a few arm-sized holes heading down what everyone always though of as "the back of the mountain".
 
 This arrangement both took all your business briskly away, but it also thoroughly washed your feet, which were likely to be entirely black upon entering. Most Crec made it past the center of the room on their way out to wash their hands, always nearest the center.
 
@@ -43,7 +43,7 @@ Verk automatically smiled broadly at Grav as he walked into the otherwise empty 
 
 What have I done? Please, believe me; my conscience is free and I want to learn from you."
 
-"Your conscience is free, huh? No, I want you to think on it. That's what you need. Verk stared with noticible anger still. Nice of you to at least notice I'm put-out with you. Your lot forgotten a lot more than you think you know.
+"Your conscience is free, huh? No, I want you to think on it. That's what you need. Verk stared with noticeable anger still. Nice of you to at least notice I'm put-out with you. Your lot forgotten a lot more than you think you know.
 
 While trying to decipher that, Grav was sure at least some kind of helpful hint was to follow this. It seemed to break the very rules of caveperson communication to just leave things hanging like this. He raised his eyebrows in a careful effort to relay this observation, gave up, closed his eyes and did his best at a 'reset', so he could think.
 
@@ -59,7 +59,7 @@ Verk made a hissing sound that Grav couldn't categorize for meaning, as he could
 
 Verk hissed again but Grav now could see that he was huffing with contempt, with an oddly abbreviated roll of the eyes.
 
-"Gog, huh? You two copulating-monkey boys going deep into the woods today?", Verk made a complex dance of facial expressions and other gestures that Grav could not decipher, other than to note that maybe there was now glee. "Stay away from the bachelor-tree, you two." Verk made a sour, disdainful face. Grav thought that he could interpret this as an invitation to "yuck it up" with another man using banana-humor. He knew well that that was not the case here. So he responded with indignancy, as he knew he should.
+"Gog, huh? You two copulating-monkey boys going deep into the woods today?", Verk made a complex dance of facial expressions and other gestures that Grav could not decipher, other than to note that maybe there was now glee. "Stay away from the bachelor-tree, you two." Verk made a sour, disdainful face. Grav thought that he could interpret this as an invitation to "yuck it up" with another man using banana-humor. He knew well that that was not the case here. So he responded with indignation, as he knew he should.
 
 "Father-Brother Verk! I would never! Please, there could be a quiet-one nearing in the entrance."
 
@@ -161,7 +161,7 @@ If you've driven those away who just /reasonably/ object to whatever urgent thin
 
 Cult of Verk has a long tail." He said without thinking.
 
-Simaltaniously, both shot a look at the other; each noticing an air of shock. Having gotten lost in the indignation he felt welling up, his speech was in sick-monkey mode. He had stopped suddenly with his mouth still slightly open.
+Simultaneously, both shot a look at the other; each noticing an air of shock. Having gotten lost in the indignation he felt welling up, his speech was in sick-monkey mode. He had stopped suddenly with his mouth still slightly open.
 
 Grav continued, with patience. "Father-Brother Verk was a bit on the abusive side with me this morning. And earlier."
 
@@ -334,7 +334,7 @@ Gog stared.
 
 Despite having clever minds, the two men had ideas that were just as firmly implanted as say "God" is in some modern humans. There is no source in shame if you are late in realizing that some things are less literal than other things. Some things went directly from an angry "must not be challenged" to a collaborative "must not be discussed" rather quickly, as this was the only way of handling these things.
 
-The obviousness of it occurred to Gog immediately and he felt ashamed at his naivete.
+The obviousness of it occurred to Gog immediately and he felt ashamed at his naïveté.
 
 "Eee..heh. Every now and then one of those pop up late in life for you and you are just so saddened by your reflect-soul."
 
@@ -354,13 +354,13 @@ Grav and Gog had clambered up to the falls where a dam had been constructed to d
 
 The twin of a small-one owned by a Worker interrupted a planning meeting in a panic insisting that his brother was pinned under a boulder. After lots of very focused, serious questioning, the boy said this was about two boulder-door men downstream where the river pinched and became more rapid.
 
-The whole mine had come together to rapidly re-enable the dam to send the river on a different (as of then, virgin) course. The dam consisted of a number of cleverly-fitting pieces, mostly bolders, and could be opened and closed in a short time with enough caveman power. There was lowering the river, and then there was "stopping" the river. There were a few dams. The stated goal of this one was the latter.
+The whole mine had come together to rapidly re-enable the dam to send the river on a different (as of then, virgin) course. The dam consisted of a number of cleverly-fitting pieces, mostly boulders, and could be opened and closed in a short time with enough caveman power. There was lowering the river, and then there was "stopping" the river. There were a few dams. The stated goal of this one was the latter.
 
 They happened to also be shorthanded that day and so worked frantically, if only to recover a body. The men who went and returned from downstream said it was too deep and strong to safely explore possible boulders, of which there were many. The one the boy pointed to was impossible. The best that might be done is to dislodge the body with a long tree trunk handled by many men.
 
 The dam building was completed in about 45 minutes, with only the powerful spray between boulders feeding the Natural river. And a hungry torrent heading roughly at a right angle to the river's original course soon took out trees and made a gorge that would surely need a name eventually.
 
-A chain of men, headed out when it was only just marginal, long enough to peek, peek again, and if possible feel under several boulders, including the prime candidate. The river was also noticibly clearer now, which helped.
+A chain of men, headed out when it was only just marginal, long enough to peek, peek again, and if possible feel under several boulders, including the prime candidate. The river was also noticeably clearer now, which helped.
 
 An older man who was doing his best to be helpful with suggestions and the general dissemination of information to those who could use it approached the boy. "Now, goat-calf, so you think these men have checked under all of the likely boulders? Could it maybe be the one behind the big one?"
 
@@ -392,7 +392,7 @@ As today's boulder was more or less in the center of the gouge, the river-fist l
 
 There were no good places to just pick up mighty boulders and drop them in the sluice. The only option was hauling the biggest boulders they could carry up the zig-zag of ladders to the top of the sluice where it's fed by the spillway. This they did, and after an infuriating walk or two down to adjust the sluice, they had a reliable way to konk the large, intriguing boulder right on its head, over and over, with the biggest boulders they care to carry one half of one boulder-door[fn:: 50] men up a series of ladders that verged on stairs but definitely were not stairs and definitely were a series of ladders for boulder-hauling purposes.
 
-The heavy boulders caused the sluice to bounce as they went down, usually not distructively but enough to affect accuracy, and so one man would carry boulders and the other would fine-tune the sluice, carrying boulders to the base of the trestle if the sluice could be left alone for a while.
+The heavy boulders caused the sluice to bounce as they went down, usually not destructively but enough to affect accuracy, and so one man would carry boulders and the other would fine-tune the sluice, carrying boulders to the base of the trestle if the sluice could be left alone for a while.
 
 Gog, while jogging around below, noticed that the sluice looked like a great trunk-harp[fn:: Some strong, dried sinew tied on one end to a hopefully-hollow trunk, and to a bit of the same tree's root (usually excavated for) on the other end, with a sort of pedal (stick, about 1/2 man long) whose one end was put on the nearby ground and the other against the sinew, near the bottom, that can be pressed variously by a foot to produce different tightness (notes) in the string. Others would strike, slap, rub with smooth honey-tackeyed sticks, dampen, punch, glance with arrows, beat with one's spear or one of your enemy's arms...whatever the trance called for. Glancing the string just right with the fingertips of a human arm made an astonishingly beautiful harp sound that was in great demand. It's quite an instrument given that it can be put together in about a minute.] string in bright, dusty sunlight, even having different "notes". Not being able to see the boulders from below, he had a hunch it had to do with boulder size.
 
@@ -412,7 +412,7 @@ Having moved the sluice downstream, and with the river still rather low, they re
 
 "Nope."
 
-Grav and Gog got their gear together, knowing that this was enough for one day. It was only one-palm-after-noon or so but they hadn't intended to make a full day out of only this, and Gog hadn't expected to get drug into a greased-obsidian-hatchling chase[fn:: A 'wild goose chase'. The greased hatchling chase was a drunken, sadistic mob activity that for some reason also involved much more butt-slapping than is normally observed. This was neither acknowledge nor understood by the Crec. The 'grease' came from the mother, which had been eaten. If there was a sufficiently feisty, scruffy, angry chick hopping around screeching as the men ate leasurly, they would, given enough end-of-the-hunt juff and spirit, catch and chuck the bird into its mother's self-made frying oil, where it would immediately hop out, now bald, greasy, furious and in pain, and having no more interest in anything but escape, would bolt into the woods. If a man caught it, he was permitted one copulation with the wife of his choosing, from any of the men.]. On some days, the exhaustion told you it was time to quit before the sun did.
+Grav and Gog got their gear together, knowing that this was enough for one day. It was only one-palm-after-noon or so but they hadn't intended to make a full day out of only this, and Gog hadn't expected to get drug into a greased-obsidian-hatchling chase[fn:: A 'wild goose chase'. The greased hatchling chase was a drunken, sadistic mob activity that for some reason also involved much more butt-slapping than is normally observed. This was neither acknowledge nor understood by the Crec. The 'grease' came from the mother, which had been eaten. If there was a sufficiently feisty, scruffy, angry chick hopping around screeching as the men ate leisurely, they would, given enough end-of-the-hunt juff and spirit, catch and chuck the bird into its mother's self-made frying oil, where it would immediately hop out, now bald, greasy, furious and in pain, and having no more interest in anything but escape, would bolt into the woods. If a man caught it, he was permitted one copulation with the wife of his choosing, from any of the men.]. On some days, the exhaustion told you it was time to quit before the sun did.
 
 They passed through the "interesting pile" and toed around as they always do out of habit. Gog, with his toe, not bothering to bend down, pushed around some head-sized rocks to see underneath, as a strategy for maximizing rocks-inspected for given effort. He could indeed "toe" entire torso sized boulder, to an extent, having an intimate understanding of rock dynamics and legs that were made out of iron-tree[fn:: Yes, the very same tree with the very same name.].
 
@@ -454,7 +454,7 @@ They both raised the stone to hip hight slowly, expecting another strange surpri
 
 They worked their way up and down slopes, trying to keep things gentle and smooth, if not always level.
 
-Midway through the clearing between the closest of the worked river basin and the beginning of their office entranceway[fn:: which was 15 man long and had a side passage or two along the way: Office supplies, miscalanoius.], both sticks suddenly and unexpectedly snapped where they came closest to the rock. The precious bundle was allowed to fall a good half-man onto an inconveniently placed sharp rock (which was probably not even necessary.)
+Midway through the clearing between the closest of the worked river basin and the beginning of their office entranceway[fn:: which was 15 man long and had a side passage or two along the way: Office supplies, miscellaneous.], both sticks suddenly and unexpectedly snapped where they came closest to the rock. The precious bundle was allowed to fall a good half-man onto an inconveniently placed sharp rock (which was probably not even necessary.)
 
 There was no longer any need to discuss how to get the thing open and which long and painful protocols to follow. The great stone egg gave up its secrets right there on the muddy clearing, both halves rocking almost mockingly for a bit with the "yolk" sliding back and forth on the smooth inner surface, free from its perfect cradle, refusing to fall back in place, or over the verge.
 
@@ -462,7 +462,7 @@ The two men, useless sticks in hand, stared silently as the two halves came to a
 
 They stared some more.
 
-"It looks like a rock-stick.", said Gog, with an involulentary vomiting guffaw that made a fart sound.
+"It looks like a rock-stick.", said Gog, with an involuntary vomiting guffaw that made a fart sound.
 
 "Uhhm... Yeah. Like, a lot.", said Grav under his breath.
 
@@ -486,11 +486,11 @@ Both men laughed.
 
 Grav was holding it in his hand in the least sexual way he could manage, inspecting it with wonder. It was a scapolite[fn:: They call this iris-stone, as it sometimes looks in color and richness like the medium-brown iris that is universal among Crec eyes, except for the cursed.]...penis, about one and one half of one pinkie-thumb long that, for the less banana-minded, might pass for something else. It was almost a kind of purity test in its ambiguity.
 
-It was something that /might/ be benign looking enough to show grandmother, if you coily avoided her eye for the first few drop-stone after revelation, looking at your fingernails, say.
+It was something that /might/ be benign looking enough to show grandmother, if you coyly avoided her eye for the first few drop-stone after revelation, looking at your fingernails, say.
 
 It was a kind of crypto-stick, for it did lack rocks. And was blunt at the "bottom", as though this was exactly what this particular unlikely combination of crystals did: Form a big human penis, and then stop abruptly when the penis part was obviously over with.
 
-Its enclosing "egg" was a sort of geode that was a semi-transparent dark blue crystal with sparkling silver veins running from the void at its center, outward to the edge of the stone as though "radiating" from the middle. Like the penis had kind of starburst of patterns eminating from it that could only be vaugly glimpsed by breaking the stone, which had been done already by Nature. All who saw it decided it needed no more exploratory cracks.
+Its enclosing "egg" was a sort of geode that was a semi-transparent dark blue crystal with sparkling silver veins running from the void at its center, outward to the edge of the stone as though "radiating" from the middle. Like the penis had kind of starburst of patterns emanating from it that could only be vaguely glimpsed by breaking the stone, which had been done already by Nature. All who saw it decided it needed no more exploratory cracks.
 
 Being wet and muddy as described, it fell and stuck halfway into the mud when Grav made the mistake of trying to hold it by its "base" and relying only on his vice-like grip on muddy stone. This could have been seen as a kind of warning to future handlers.
 
@@ -502,7 +502,7 @@ Being wet and muddy as described, it fell and stuck halfway into the mud when Gr
 
 "What the Afterlife, brother. I am legitimately weirded out by this thing.", worried Grav aloud.
 
-"Well," Gog said, "I am just going to follow a kind of crazy-benefit-think predict-tool here. Criticize not my hurried handywork[fn:: Don't judge.]. What if we just totally play dumb, all day, every day[fn:: Pronounced 'dakom!'] and never let on.
+"Well," Gog said, "I am just going to follow a kind of crazy-benefit-think predict-tool here. Criticize not my hurried handy-work[fn:: Don't judge.]. What if we just totally play dumb, all day, every day[fn:: Pronounced 'dakom!'] and never let on.
 
 So we found a lifetime value-stone. So what? Do you expect Father-Brother-Wife Kham to say to us, /Hey, boys, don't you think this looks like a big, rigid stone-branch?/"
 
@@ -510,7 +510,7 @@ So we found a lifetime value-stone. So what? Do you expect Father-Brother-Wife K
 
 "Exactly!"
 
-They decided that lining the cradle with two of the thinest leaves they could find and packing the whole thing as it was found, more or less, was the safest way for it to travel. After lightly scrubbing the triune of mysterious stone with the finest silt they could find, applied with a handfull of soft, green leaves, they rinsed all in a clean part of the river and let the pieces dry on the open floor for a palm or two and talked.
+They decided that lining the cradle with two of the thinest leaves they could find and packing the whole thing as it was found, more or less, was the safest way for it to travel. After lightly scrubbing the triune of mysterious stone with the finest silt they could find, applied with a handful of soft, green leaves, they rinsed all in a clean part of the river and let the pieces dry on the open floor for a palm or two and talked.
 
 "Let's just decide right here and now that neither of us are going to crack. It's like a secret you're sworn to keep, except in this case you are obliged to always keep up an act: We have no idea it looks like the massive, fully grown caveman's throbbing pebble-twig. We think it looks more like a kind of fish we saw once; exactly like that kind of fish!
 
@@ -522,7 +522,7 @@ We're hopelessly biased in that direction. We are deaf to the innuendos of even 
 
 "You scat-pile on it too?[fn:: Nearly all boys, and almost always only boys, at some point would encounter the solemn scat-pile ritual. It's like a pinkie promise except, to signal the gravity of your oath, the boy subject to the oath would shit on top of a freshly laid shit made by the other boy. This was a symbolic way of saying, we are together in this dangerous world and 'I promise'. Scat, human or otherwise, has an intimate part to play in the predator-pray dynamic. /Your/ scat, all by itself, even if long behind you, is always an invitation for a predator to follow. It has its parallels in our world. Among men this was said with a twist of mirth but at the same time seen as a legitimate promise, as all promises made by true cavemen are actual, legitimate promises, rituals or irony aside.]"
 
-"Yep. I'm in. I think it's fun to mount human behavior just for the colliding-stamped aspect of it[fn:: It's fun to fuck with people, even if only for the trainwreck angle.]. Is any of this /wrong/? I mean, I don't think for a second that it is. How, omitting our opinion about what something might look like? We cannot decide not to take sides? Maybe we begrudgingly see a similarity but lots of things in the Forest have that shape."
+"Yep. I'm in. I think it's fun to mount human behavior just for the colliding-stamped aspect of it[fn:: It's fun to fuck with people, even if only for the train wreck angle.]. Is any of this /wrong/? I mean, I don't think for a second that it is. How, omitting our opinion about what something might look like? We cannot decide not to take sides? Maybe we begrudgingly see a similarity but lots of things in the Forest have that shape."
 
 Gog: "Yep."
 
@@ -614,7 +614,7 @@ The two men, having most materials already handy, re-secured the egg and its yol
 
 The two men saluted by grabbing their left ankle with their right hand, locking their right knee, straightening and looking straight ahead at infinity with their shoulders square. "With the mind of a rutting ambling-feast, in a great blizzard, our Upper-Brother leader Father-Brother Verk! We will be there!"
 
-Gog said this alone as Grav did his best to make broad, sincere eyes. The men had not yet mastered speaking-as-one-in-battle[fn:: The meaning is obvious if you think in terms of the need for soldiers to not only act as one, but to literally think as one. This is a resource that modern humans are almost entirely without. A fierce sense of personal sovereignty that exists, even in remote, simpler communities of any left-over bit of 'primitive' culture still present in our world, in all modern humans has been a kind of wrench in the works of humanity, but also a great blessing. Humanity took a kind of fork in the cultural progression road, some time long ago. With practice the Crec, any Crec and most tribes known by them at the time could, when under extreme duress where lives or maybe whole cultures are at stake, literally respond as one to their superiors, so thorough was military training. One helpful factor, in your defense is that battle lacks a lot of nuance and the overall tasks are few.], which is a practice solders of at least mid-rank were expected to do spontaniously, at times that to Grav seemed to have no pattern.
+Gog said this alone as Grav did his best to make broad, sincere eyes. The men had not yet mastered speaking-as-one-in-battle[fn:: The meaning is obvious if you think in terms of the need for soldiers to not only act as one, but to literally think as one. This is a resource that modern humans are almost entirely without. A fierce sense of personal sovereignty that exists, even in remote, simpler communities of any left-over bit of 'primitive' culture still present in our world, in all modern humans has been a kind of wrench in the works of humanity, but also a great blessing. Humanity took a kind of fork in the cultural progression road, some time long ago. With practice the Crec, any Crec and most tribes known by them at the time could, when under extreme duress where lives or maybe whole cultures are at stake, literally respond as one to their superiors, so thorough was military training. One helpful factor, in your defense is that battle lacks a lot of nuance and the overall tasks are few.], which is a practice solders of at least mid-rank were expected to do spontaneously, at times that to Grav seemed to have no pattern.
 
 Verk squinted and stepped out into the pink late afternoon.
 
